# quantum-fragment-methods

./: .gitignore  CHANGELOG.md  CITATION.cff  Containerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: BUILD-GUIDE.md  HPC.md  contributing.md
examples/local_demo/: config.yaml  config_H2_demo.yaml  config_H2_sto-3g_demo.yaml  config_N2_6-31G_demo.yaml  config_N2_demo.yaml  sqd_H2_demo.ipynb  sqd_N2_6-31G_demo.ipynb  sqd_N2_demo.ipynb  sqd_N2_sto-3g_demo.ipynb  sqd_demo.ipynb  system.xyz  tutorial.ipynb
examples/local_demo/sqd_results/: counts.npy  job_id.txt
examples/local_demo/sqd_results/sqd_diagonalizer/: fcidump.txt
examples/local_demo/sqd_results/sqd_diagonalizer/batch_0/: 1pRDM.txt  2pRDM.txt  AlphaDets.txt
quantum_fragment_methods/: __init__.py  workflow.py
quantum_fragment_methods/application/: __init__.py
quantum_fragment_methods/application/embedding/: __init__.py  base.py  ewf.py
quantum_fragment_methods/application/solvers/: __init__.py  base.py
quantum_fragment_methods/application/solvers/classical_zoo/: __init__.py  ccsd.py  fci.py
quantum_fragment_methods/application/solvers/quantum_zoo/: __init__.py  ext_sqd.py  sqd.py
quantum_fragment_methods/application/solvers/quantum_zoo/utils/: __init__.py  fermion_local.py  lucj.py  sbd_interface.py
quantum_fragment_methods/config/: __init__.py  qpu_config.yaml.example
quantum_fragment_methods/qpu/: __init__.py  base.py  qiskit_ibm_runtime.py
quantum_fragment_methods/tests/: __init__.py  conftest.py  run_tests.sh  test_ewf.py  test_solvers.py  test_workflow.py
